--- a/D3js /D3.js-SVG.md
+++ b/D3js /D3.js-SVG.md
@@ -1,22 +1,23 @@
 ##### about SVG graph 
 
 設定d3圖行生成的區域：
+
         var canvas = d3.select("body")
                     .append("svg")
                     .attr("height",500)
                     .attr("width" , 800)
 
-
-
 1. rect 方形 svg:rect x="0" y="0" width="0" height="0" rx="0" ry="0" 
 
-      var rect = canvas.append("rect")
+     ` var rect = canvas.append("rect")
                 .attr("x",100) // 起始為自x點
                 .attr("y",100) // 起始為自x點
                 .attr("height",100) // 方形的長
                 .attr("width",100) // 方形的寬
                 .attr("rx",) // 四個角的弧度
                 .attr("ry") // 四個角的弧度
+                
+                
 2. circle 圓形 svg:circle cx="0" cy="0" r="0"
 
       var circle =canvas.append("circle")
@@ -34,11 +35,17 @@
           
 4.line 線  svg:line x1="0" y1="0" x2="0" y2="0" 
   
-      var line = canvas.append("line")
-          .attr("x1",100)
-          .attr("y1",100)
-          .attr("x2",100)
-          .attr("y2",100)
+      var line = canvas.append("line") 兩點之間的距離
+          .attr("x1",100) // 第一點
+          .attr("y1",100) // 第一點
+          .attr("x2",100) // 第二點
+          .attr("y2",100) // 第二點
           
+5.text 創造 文字 
 
-          
+        var text =canvas.append("text")
+		.attr("x",200) //text的x位置
+		.attr("y",100) //text的x位置
+		.text("this is ffuncing word") // 文字內容 
+                
+  
