--- a/D3js /D3.js-SVG.md
+++ b/D3js /D3.js-SVG.md
@@ -8,19 +8,19 @@
                     .attr("width" , 800)
 
 1. rect 方形 svg:rect x="0" y="0" width="0" height="0" rx="0" ry="0" 
-
-     ` var rect = canvas.append("rect")
-                .attr("x",100) // 起始為自x點
-                .attr("y",100) // 起始為自x點
-                .attr("height",100) // 方形的長
-                .attr("width",100) // 方形的寬
-                .attr("rx",) // 四個角的弧度
-                .attr("ry") // 四個角的弧度
+	
+       var rect = canvas.append("rect")
+             .attr("x",100) // 起始為自x點
+             .attr("y",100) // 起始為自x點
+             .attr("height",100) // 方形的長
+             .attr("width",100) // 方形的寬
+             .attr("rx",) // 四個角的弧度
+             .attr("ry") // 四個角的弧度
                 
                 
 2. circle 圓形 svg:circle cx="0" cy="0" r="0"
 
-      var circle =canvas.append("circle")
+       var circle =canvas.append("circle")
           .attr("cx",150) // 中心x點
           .attr("cy",125) // 中心y點
           .attr("r",20) // 半徑
