--- a/用户触及下降.md
+++ b/用户触及下降.md
@@ -4,64 +4,64 @@
 请你把下降的原因分析出来       
 请问有些些分析的思路？  
 
-總盤來說：我們可思考幾件事情：   
-1. 假日：   
-假日可能会照触及率的上升或者下降，特别是生产力相关的应用软件
-如果透过国家之间之间的比较，如果可以有符合趋势的下降，那可能
-其中的原因。
+總盤來說：我們可思考幾件事情：    
+1.假日：     
+假日可能会照触及率的上升或者下降，特别是生产力相关的应用软件  
+如果透过国家之间之间的比较，如果可以有符合趋势的下降，那可能    
+其中的原因。   
 
-2.軟件的bug:
-這部分好理解，但不容易分析出來，像是用戶流程的哪段出了問題，   
-如果是用戶註冊或者重複登陸的端口出現困難或者用戶燈如時間過
+2.軟件的bug:   
+這部分好理解，但不容易分析出來，像是用戶流程的哪段出了問題  
+如果是用戶註冊或者重複登陸的端口出現困難或者用戶燈如時間過  
 長等，那這部分就會比較好去篩選出，但如果是軟件中，有部分功  
 能的出錯，那就會再往身不的資料去分析。  
 
-3.聊天機器人互動端的跟不上
-一般大網站多少都會載配需多聊天機器人互動的端口，但往往有時候，  
-會跟不上與用戶互動的腳步，可能是因為產品的更新速度，軟件流程  
+3.聊天機器人互動端的跟不上  
+一般大網站多少都會載配需多聊天機器人互動的端口，但往往有時候，        
+會跟不上與用戶互動的腳步，可能是因為產品的更新速度，軟件流程      
 功能的更新等等，都可以造成與用戶互動上的斷層。  
 
 4.伺服器端的流量運載   
 伺服器提供端可能有更新，或者照成短暫的伺服器停止供應服務，會   
 照成特定時間的用戶及率下降。   
 
-5.市場行銷的後遺症
-例如因為幾個市場行銷的時間點照成用戶觸及路快速上升，但等行銷
-活動結束後，就可能會照成觸及路減緩並下降，這部分可以與行銷部
-門確認。
+5.市場行銷的後遺症  
+例如因為幾個市場行銷的時間點照成用戶觸及路快速上升，但等行銷   
+活動結束後，就可能會照成觸及路減緩並下降，這部分可以與行銷部        
+門確認。    
 
-6.可能數據來源的錯誤   
+6.可能數據來源的錯誤     
 可能出現錯誤的用戶觸及率記低的資料出現錯誤會比較少，但是可能  
 會出現他的數據，因此有時候可以雙重確認數據來源的篩選背後的規   
 則，是否與真實反映的問題可以相匹配  
 
-調查的流程(模擬演練)：  
+調查的流程(模擬演練)：      
 1.活躍用戶與所有用戶的對比  
-我們可以查詢幾個數據，第一個現行用戶總體是上漲還是下降，第二  
-個活躍用戶實際狀況，這時候可以與用戶觸及率下降的表作比較，是  
-否觸及率下降跟整體用戶增長的趨勢相符？是否觸及率下降根跟活躍  
+我們可以查詢幾個數據，第一個現行用戶總體是上漲還是下降，第二    
+個活躍用戶實際狀況，這時候可以與用戶觸及率下降的表作比較，是     
+否觸及率下降跟整體用戶增長的趨勢相符？是否觸及率下降根跟活躍     
 用戶下降趨勢相符？  
-
-2. 用戶年齡
-這部不只要將用戶的使用年齡，分為幾個區間，十周以上，以十周
-以下，十周以下的每一周為一個區間，這部分可以觀察到，首
-先用戶的觸及率，成長的點是否因為新用戶的成長所影響？再來可以
-觀察，老用戶的觸擊率的活動量整體是持於穩定，還是下降，並與新
-用戶做相比較，在此案子裡面，我們發現老用戶的使用狀況逐步的下
-降，但是新卻是整體的穩定的成長。
+  
+2.用戶年齡    
+這部是要將用戶的使用年齡，分為幾個區間，十周以上，以十周以下   
+，十周以下的每一周為一個區間，這部分可以觀察到，首先用戶的觸   
+及率，成長的點是否因為新用戶的成長所影響？再來可以觀察，老用   
+戶的觸擊率的活動量整體是持於穩定，還是下降，並與新用戶做相比   
+較，在此案子裡面，我們發現老用戶的使用狀況逐步的下降，但是新   
+卻是整體的穩定的成長。
 
 3.裝置來源的觸及率
 我們由上述兩個可以得到幾個確認的分析結果，整體活躍用戶成長表  
-現是穩定，但是其實老用戶的成長率是下降，新用戶是成長的，因此  
-兩個相抵才呈現穩定。而我們也可以透過裝置的就及率來從另一個數  
-據處理的角度來分析。這個案例：發現手機用的下降的幅度相對，平  
-版、pc端的角度還要大，因此我們可以看看手機用戶有什麼特別的event  
+現是穩定，但是其實老用戶的成長率是下降，新用戶是成長的，因此   
+兩個相抵才呈現穩定。而我們也可以透過裝置的就及率來從另一個數     
+據處理的角度來分析。這個案例：發現手機用的下降的幅度相對，平     
+版、pc端的角度還要大，因此我們可以看看手機用戶有什麼特別的event    
 發生!
 
 4.digest mail 
-我們看了一下，發現在這高峰點下的時間，剛好是公司減少發digest-mail  
-的時間點，這時候可能可以考慮，老用戶倚靠digest mail 比較高，  
-因此，可能可以從這一份部分著手。  
+我們看了一下，發現在這高峰點下的時間，剛好是公司減少發 digest-mail   
+的時間點，這時候可能可以考慮，老用戶倚靠digest mail 比較高，     
+因此，可能可以從這一份部分著手。     
 
 
 
