--- a/hospital adminstration /醫院收費.md
+++ b/hospital adminstration /醫院收費.md
@@ -1,7 +1,18 @@
  ##### 醫療收費行為
  
- 利用醫療收費行為來實現科學管理，方法是透過把工作量化的方式，與薪資跨勾。  
- 目前公司利用收費的行爲可以分析幾個醫療管理的方案：   
+ 利用醫療收費行為來實現科學的績效管理，方法是透過把收費行為把工作量話。
+ 
+ 工作的量化，從收費結果最誠實體現工作量的高低，而且也是給予獎金最直觀的方式，    
+ 以往我們給予績效獎勵，會直接地從收入和成本兩大塊去考量，收入的高低的確可以反   
+ 映同段時間的個體間的差異比較，而成本的因素的考量，可以評判實際價值。但簡單的  
+ 收減支，會掉落一個誤區，那就是少了一個評判個體間的差異維度。   
+ 因此，進一步，組織就會依據1.全院的公平性2.醫院發展方向的傾斜政策等方面給予收  
+ 減支的權重等。   
+ 當然從簡單的(收-支)進化到（收-支)＊權重這算是一個邁向多維度的考核方式。  
+ 
+ 
+ 
+      
  1.床日總量：   
  2.護理人數：   
  3.科室內部醫護比    
