--- a/hospital adminstration /醫院收費.md
+++ b/hospital adminstration /醫院收費.md
@@ -1,6 +1,7 @@
  ##### 醫療收費行為
  
- 利用醫療收費行為來實現科學的績效管理，方法是透過把收費行為把工作量話。
+ 利用醫療收費行為來實現科學的績效管理，方法是透過把收費行為把工作量化。也是常見
+ 醫療機構給予醫療人員激勵的一個方式。
  
  工作的量化，從收費結果最誠實體現工作量的高低，而且也是給予獎金最直觀的方式，    
  以往我們給予績效獎勵，會直接地從收入和成本兩大塊去考量，收入的高低的確可以反   
@@ -8,16 +9,22 @@
  收減支，會掉落一個誤區，那就是少了一個評判個體間的差異維度。   
  因此，進一步，組織就會依據1.全院的公平性2.醫院發展方向的傾斜政策等方面給予收  
  減支的權重等。   
- 當然從簡單的(收-支)進化到（收-支)＊權重這算是一個邁向多維度的考核方式。  
+ 當然從簡單的(收-支)進化到（收-支)＊權重。這算是一個邁向多維度的考核方式。但，
+ 我們都知道還不夠，因此進一階的考核方式，就是增加kpi指標，kpi的考核指標，在醫療
+ 單位可能是1.就診人次2.臨床入徑考核3.藥佔比等等其他。 但這部分有一點不足的地方
+ 是：國內的收費行為有時候很難去從物價的定價去體現。目前物價有幾個特性：1.有時間
+ 的滯後性，比較難即時的反應現在的物價水準2.物價現行過低，多半無法體現工作價值 
+ 3.物價放寬自費市場的腳步慢
+ 因此，常常醫院會從雙提、二提、雙核等，常常在這個過程中，把所有的收費都給到臨床
+ 科室，一方面這樣不符合經濟效應，一方面面對考核檢查，常常可能拿不出具體的解釋方案。
+ 這些都是常見依據收費行為來給予醫療人員的核算方式。
+ 當然收費行爲可以是醫療單位去呈現醫療
+ 
+
+
  
  
  
-      
- 1.床日總量：   
- 2.護理人數：   
- 3.科室內部醫護比    
- 4.總體醫院科室   
- 5.治療類性讚傯   
- 6.體獎的具體比例  
- 7.
+ 
+
  
