--- a/hospital adminstration /醫院收費.md
+++ b/hospital adminstration /醫院收費.md
@@ -10,15 +10,25 @@
  因此，進一步，組織就會依據1.全院的公平性2.醫院發展方向的傾斜政策等方面給予收  
  減支的權重等。   
  當然從簡單的(收-支)進化到（收-支)＊權重。這算是一個邁向多維度的考核方式。但，
- 我們都知道還不夠，因此進一階的考核方式，就是增加kpi指標，kpi的考核指標，在醫療
- 單位可能是1.就診人次2.臨床入徑考核3.藥佔比等等其他。 但這部分有一點不足的地方
- 是：國內的收費行為有時候很難去從物價的定價去體現。目前物價有幾個特性：1.有時間
- 的滯後性，比較難即時的反應現在的物價水準2.物價現行過低，多半無法體現工作價值 
- 3.物價放寬自費市場的腳步慢
- 因此，常常醫院會從雙提、二提、雙核等，常常在這個過程中，把所有的收費都給到臨床
- 科室，一方面這樣不符合經濟效應，一方面面對考核檢查，常常可能拿不出具體的解釋方案。
- 這些都是常見依據收費行為來給予醫療人員的核算方式。
- 當然收費行爲可以是醫療單位去呈現醫療
+ 我們都知道還不夠，因此進一階的考核方式，就是增加kpi指標，kpi的考核指標，在醫療  
+ 單位可能是1.就診人次2.臨床入徑考核3.藥佔比等等其他。 但這部分有一點不足的地方  
+ 是：國內的收費行為有時候很難去從物價的定價去體現。目前物價有幾個特性：1.有時間  
+ 的滯後性，比較難即時的反應現在的物價水準2.物價現行過低，多半無法體現工作價值   
+ 3.物價放寬自費市場的腳步慢  
+ 因此，常常醫院會從雙提、二提、雙核等，常常在這個過程中，把所有的收費都給到臨床  
+ 科室，一方面這樣不符合經濟效應，一方面面對考核檢查，常常可能拿不出具體的解釋方案。     
+ 這些都是常見依據收費行為來給予醫療人員的核算方式。 
+ 
+ 如果我們可以透過建構一條具有信效度的一個評價體系，跳脫收費價格，依據每一個醫療
+ 行爲去評估1.資源消耗2.醫療提供者的方顯3.醫療提供者技能所需投入的時間與經濟成本
+ 4.腦力價值5.承擔壓力等幾個指標。 美國哈佛就提出了一個這樣的評價體系。稱之為：rvrbs
+ 。
+ 
+ 
+ 
+ 
+ 當然收費行爲可以是醫療單位去呈現醫療服務的供給量化，如果我們換一個角度，如果去追   
+ 蹤一個人的就診狀況，那我們就可以知道，某些人，或者某些特種的病人的全體，其就醫狀況，
  
 
 
